Added docker file and unit tests

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,5 @@ spring.data.mongodb.database=friendsmanagement
 #logging
 logging.level.org.springframework.data=debug
 logging.level.=error
+
+dockerspring.data.mongodb.uri= mongodb://mongo:27017/friendsmanagement
